top.htmlのベース完成、あとは背景を面白くする、色を調整する、テキストを考える

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" type="text/css" href="css/reset.css" />
-    <link rel="stylesheet" type="text/css" href="css/style.css" />
+    <link rel="stylesheet" type="text/css" href="css/main.css" />
   </head>
 
   <body>
@@ -30,17 +30,17 @@
       <h1 class="site-title">SHUNTA HOSAKA</h1>
       <div class="buttons">
         <a class="button" href="#about">LEARN MORE</a>
-        <a class="button button-showy" href="#contact">SEND MESSAGE</a>
+        <a class="button button-showy" href="#">SEND MESSAGE</a>
       </div>
     </header>
 
     <section class="about" id="about">
       <h2 class="heading">ABOUT ME</h2>
       <p class="about-text">
-        初めまして、早稲田大学でビジネスを学びながら、プログラミングをしております。<br />作りたいものを自分の力で作れる自走できるエンジニアを目指します。
+        早稲田大学4年生　現在２５歳
       </p>
       <p class="about-text">
-        在学期間に合計２２カ国をバックパッカーとして、または友人と旅行で訪れました。<br />その経験の中で、タイ王国が自分にとって最も居心地の良き場所だと発見し、現在はタイの首都バンコクで時間と場所に捉われずに生きていく術を模索しています。
+        フラフラしてたらみんな社会人になっていたね
       </p>
     </section>
 
@@ -56,7 +56,7 @@
     <section class="skills">
       <h2 class="heading">SKILLS</h2>
       <p class="skills-text">
-        HTML5/CSS3/JavaScript/React/React Native/PHP/Laravel/WordPress
+        マイペンライ/
       </p>
       <p class="skills-text"></p>
     </section>
