--- a/index.html
+++ b/index.html
@@ -25,44 +25,99 @@
   <body>
     <header class="header">
       <p class="site-title-sub">
-        Engineer's portfolio
+        My portfolio
       </p>
       <h1 class="site-title">SHUNTA HOSAKA</h1>
+      <div class="my-profile-pic"></div>
       <div class="buttons">
-        <a class="button" href="#about">LEARN MORE</a>
-        <a class="button button-showy" href="#">SEND MESSAGE</a>
+        <a class="button" href="top.html">GO TOP</a>
+        <a class="button button-showy" href="#about">LEARN MORE</a>
       </div>
     </header>
 
     <section class="about" id="about">
       <h2 class="heading">ABOUT ME</h2>
-      <p class="about-text">
-        早稲田大学4年生　現在２５歳
-      </p>
-      <p class="about-text">
-        フラフラしてたらみんな社会人になっていたね
-      </p>
+
+      <div class="about-text">
+        <p>
+          早稲田大学4年生　商学部　25歳
+        </p>
+        <p>
+          好きなこと　海外旅行　お酒を飲む　歌う　浜辺でビールを飲む
+        </p>
+      </div>
     </section>
 
-    <section class="works">
-      <h2 class="heading">WORKS</h2>
-      <p class="works-text">Coming soon...</p>
-
-      <div class="works-wrapper">
-        <div class="work-box"></div>
-      </div>
+    <section class="story">
+      <h2 class="heading">STORY</h2>
+      <ul class="timeline">
+        <li>
+          <p class="timeline-date">18歳</p>
+          <div class="timeline-content">
+            <h5>大学受験失敗</h5>
+            <p>
+              東京に上京して予備校に通うことになる。意外と寮生活が楽しい
+            </p>
+          </div>
+        </li>
+        <li>
+          <p class="timeline-date">19歳</p>
+          <div class="timeline-content">
+            <h5>浪人時代</h5>
+            <p>
+              ちゃんと勉強する。だけどまた落ちる。
+            </p>
+          </div>
+        </li>
+        <li>
+          <p class="timeline-date">21歳</p>
+          <div class="timeline-content">
+            <h5>仮面浪人し始める</h5>
+            <p>
+              海外旅行とかサークルをしてみる。何か腑に落ちないのでクリスマス頃に仮面浪人になる。早稲田に受かる。
+            </p>
+          </div>
+        </li>
+        <li>
+          <p class="timeline-date">22~23歳</p>
+          <div class="timeline-content">
+            <h5>堕落する</h5>
+            <p>
+              学校があるときは飲みを楽しみにし、長期休暇は旅行を楽しみに生きる
+            </p>
+          </div>
+        </li>
+        <li>
+          <p class="timeline-date">24歳</p>
+          <div class="timeline-content">
+            <h5>休学をする</h5>
+            <p>
+              英語を勉強したくなり、休学。なのに何故かタイで沈没生活し始める
+            </p>
+          </div>
+        </li>
+        <li>
+          <p class="timeline-date">25歳</p>
+          <div class="timeline-content">
+            <h5>最後の１年が始まる</h5>
+            <p>
+              気づけば、大学4年になっており、単位回収に勤しむ
+            </p>
+          </div>
+        </li>
+      </ul>
     </section>
 
     <section class="skills">
       <h2 class="heading">SKILLS</h2>
       <p class="skills-text">
-        マイペンライ/
+        HTML5/CSS3/SCSS/JavaScript/Vue.js/TypeScript/Python/Django/Git/Docker
       </p>
       <p class="skills-text"></p>
     </section>
 
     <section class="footer">
-      @SHUNTA HOSAKA
+      <p>@SHUNTA HOSAKA</p>
     </section>
   </body>
 </html>
