--- a/index.html
+++ b/index.html
@@ -1,13 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="ja">
   <head>
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0, 
-  minimum-scale=1.0"
-    />
-    <title>Shunta's Portfolio</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link
       href="https://fonts.googleapis.com/css?family=Raleway"
       rel="stylesheet"
@@ -18,106 +14,123 @@
       integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" type="text/css" href="css/reset.css" />
-    <link rel="stylesheet" type="text/css" href="css/main.css" />
+    <link rel="stylesheet" href="./css/reset.css" />
+    <link rel="stylesheet" href="./css/index.css" />
+    <title>Shunta Hosaka</title>
   </head>
-
   <body>
-    <header class="header">
-      <p class="site-title-sub">
-        My portfolio
-      </p>
-      <h1 class="site-title">SHUNTA HOSAKA</h1>
-      <div class="my-profile-pic"></div>
-      <div class="buttons">
-        <a class="button" href="top.html">GO TOP</a>
-        <a class="button button-showy" href="#about">LEARN MORE</a>
+    <div class="wrapper">
+      <div class="line line1">
+        <span class="circle circle-top"></span>
+        <div class="dotted">
+          <span class="dot dot-top"></span>
+          <span class="dot dot-middle-top"></span>
+          <span class="dot dot-middle-bottom"></span>
+          <span class="dot dot-bottom"></span>
+        </div>
+        <span class="circle circle-bottom"></span>
       </div>
-    </header>
-
-    <section class="about" id="about">
-      <h2 class="heading">ABOUT ME</h2>
-
-      <div class="about-text">
-        <p>
-          早稲田大学4年生　商学部　25歳
-        </p>
-        <p>
-          好きなこと　海外旅行　お酒を飲む　歌う　浜辺でビールを飲む
-        </p>
+      <div class="line line2">
+        <span class="circle circle-top"></span>
+        <div class="dotted">
+          <span class="dot dot-top"></span>
+          <span class="dot dot-middle-top"></span>
+          <span class="dot dot-middle-bottom"></span>
+          <span class="dot dot-bottom"></span>
+        </div>
+        <span class="circle circle-bottom"></span>
       </div>
-    </section>
-
-    <section class="story">
-      <h2 class="heading">STORY</h2>
-      <ul class="timeline">
-        <li>
-          <p class="timeline-date">18歳</p>
-          <div class="timeline-content">
-            <h5>大学受験失敗</h5>
-            <p>
-              東京に上京して予備校に通うことになる。意外と寮生活が楽しい
-            </p>
-          </div>
-        </li>
-        <li>
-          <p class="timeline-date">19歳</p>
-          <div class="timeline-content">
-            <h5>浪人時代</h5>
-            <p>
-              ちゃんと勉強する。だけどまた落ちる。
-            </p>
-          </div>
-        </li>
-        <li>
-          <p class="timeline-date">21歳</p>
-          <div class="timeline-content">
-            <h5>仮面浪人し始める</h5>
-            <p>
-              海外旅行とかサークルをしてみる。何か腑に落ちないのでクリスマス頃に仮面浪人になる。早稲田に受かる。
-            </p>
-          </div>
-        </li>
-        <li>
-          <p class="timeline-date">22~23歳</p>
-          <div class="timeline-content">
-            <h5>堕落する</h5>
-            <p>
-              学校があるときは飲みを楽しみにし、長期休暇は旅行を楽しみに生きる
-            </p>
-          </div>
-        </li>
-        <li>
-          <p class="timeline-date">24歳</p>
-          <div class="timeline-content">
-            <h5>休学をする</h5>
-            <p>
-              英語を勉強したくなり、休学。なのに何故かタイで沈没生活し始める
-            </p>
-          </div>
-        </li>
-        <li>
-          <p class="timeline-date">25歳</p>
-          <div class="timeline-content">
-            <h5>最後の１年が始まる</h5>
-            <p>
-              気づけば、大学4年になっており、単位回収に勤しむ
-            </p>
-          </div>
-        </li>
-      </ul>
-    </section>
-
-    <section class="skills">
-      <h2 class="heading">SKILLS</h2>
-      <p class="skills-text">
-        HTML5/CSS3/SCSS/JavaScript/Vue.js/TypeScript/Python/Django/Git/Docker
-      </p>
-      <p class="skills-text"></p>
-    </section>
-
-    <section class="footer">
-      <p>@SHUNTA HOSAKA</p>
-    </section>
+      <div class="line line3">
+        <span class="circle circle-top"></span>
+        <div class="dotted">
+          <span class="dot dot-top"></span>
+          <span class="dot dot-middle-top"></span>
+          <span class="dot dot-middle-bottom"></span>
+          <span class="dot dot-bottom"></span>
+        </div>
+        <span class="circle circle-bottom"></span>
+      </div>
+      <div class="line line4">
+        <span class="circle circle-top"></span>
+        <div class="dotted">
+          <span class="dot dot-top"></span>
+          <span class="dot dot-middle-top"></span>
+          <span class="dot dot-middle-bottom"></span>
+          <span class="dot dot-bottom"></span>
+        </div>
+        <span class="circle circle-bottom"></span>
+      </div>
+      <div class="line line5">
+        <span class="circle circle-top"></span>
+        <div class="dotted">
+          <span class="dot dot-top"></span>
+          <span class="dot dot-middle-top"></span>
+          <span class="dot dot-middle-bottom"></span>
+          <span class="dot dot-bottom"></span>
+        </div>
+        <span class="circle circle-bottom"></span>
+      </div>
+      <div class="line line6">
+        <span class="circle circle-top"></span>
+        <div class="dotted">
+          <span class="dot dot-top"></span>
+          <span class="dot dot-middle-top"></span>
+          <span class="dot dot-middle-bottom"></span>
+          <span class="dot dot-bottom"></span>
+        </div>
+        <span class="circle circle-bottom"></span>
+      </div>
+      <div class="line line7">
+        <span class="circle circle-top"></span>
+        <div class="dotted">
+          <span class="dot dot-top"></span>
+          <span class="dot dot-middle-top"></span>
+          <span class="dot dot-middle-bottom"></span>
+          <span class="dot dot-bottom"></span>
+        </div>
+        <span class="circle circle-bottom"></span>
+      </div>
+      <div class="line line8">
+        <span class="circle circle-top"></span>
+        <div class="dotted">
+          <span class="dot dot-top"></span>
+          <span class="dot dot-middle-top"></span>
+          <span class="dot dot-middle-bottom"></span>
+          <span class="dot dot-bottom"></span>
+        </div>
+        <span class="circle circle-bottom"></span>
+      </div>
+      <div class="line line9">
+        <span class="circle circle-top"></span>
+        <div class="dotted">
+          <span class="dot dot-top"></span>
+          <span class="dot dot-middle-top"></span>
+          <span class="dot dot-middle-bottom"></span>
+          <span class="dot dot-bottom"></span>
+        </div>
+        <span class="circle circle-bottom"></span>
+      </div>
+      <div class="line line10">
+        <span class="circle circle-top"></span>
+        <div class="dotted">
+          <span class="dot dot-top"></span>
+          <span class="dot dot-middle-top"></span>
+          <span class="dot dot-middle-bottom"></span>
+          <span class="dot dot-bottom"></span>
+        </div>
+        <span class="circle circle-bottom"></span>
+      </div>
+      <div class="line line11">
+        <span class="circle circle-top"></span>
+        <div class="dotted">
+          <span class="dot dot-top"></span>
+          <span class="dot dot-middle-top"></span>
+          <span class="dot dot-middle-bottom"></span>
+          <span class="dot dot-bottom"></span>
+        </div>
+        <span class="circle circle-bottom"></span>
+      </div>
+    </div>
+    <a class="button" href="main.html">COME</a>
   </body>
 </html>
